init/rename-project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yt-music-clone-next",
+  "name": "nextjs-clone-youtube-music",
   "version": "0.1.0",
   "private": true,
   "scripts": {
